This is my third assignment

--- a/aboutus.html
+++ b/aboutus.html
@@ -18,6 +18,7 @@
             <span><a href="aboutus.html" id="contact">About us</a></span>
             <span><a href="signin.html" >Signup</a></span>
             <span><a href="login.html" >Login</a></span>
+            <span ><a href="cart.html"><img src="IMG/logocart.png" id="logo1"></a></span>
         </div>
         <div id="aboutbox">
             <h4> Gilato Shop ice cream has been opened in 2001 it has many brunches 
