--- a/bars.html
+++ b/bars.html
@@ -17,7 +17,9 @@
             <span><a href="aboutus.html" >About us</a></span>
             <span><a href="signin.html" >Signup</a></span>
             <span><a href="login.html" >Login</a></span>
+            <span ><a href="cart.html"><img src="IMG/logocart.png" id="logo1"></a></span>
         </div>
+        <div id="cart">
         <div class="dropdown">
             <button>Category</button>
             <div class="dropdown-content">
@@ -26,7 +28,7 @@
             <a href="bars.html">Bars</a>
             </div>
         </div>
-        <div>
+       <!-- <div>
             <img class="picleft" src="IMG/bar1.png" alt="picture of ice cream">
             <img class="picmiddle" src="IMG/bar2.png" alt="picture of ice cream">
             <img class="picmiddle" src="IMG/bar3.png" alt="picture of ice cream">
@@ -46,6 +48,60 @@
             <span class="pictextmiddle">Mango (10D)</span>
             <span class="pictextmiddle">Lemon (10D)</span>
         </div>
+        -->
+        <div class="line">  </div>
+        <div >
+            <table style="width:100%" class="table1">
+                <tr>
+                  <th> </th>
+                  <th>flavour</th> 
+                  <th>Price</th>
+                  <th>add to cart</th>
+                </tr>
+                <tr>    
+                    <td><img src="IMG/bar1.png" class="picart1"></td>
+                    <td>Chocolate</td>
+                   <td>12DL</td>
+                   <td><input type="radio"  value="12">
+                   </td>
+                  </tr>
+                  <tr>    
+                      <td><img src="IMG/bar2.png" class="picart1"></td>
+                      <td>Strawberry</td>
+                     <td>15DL</td>
+                     <td><input type="radio"  value="12">
+                     </td>
+                    </tr>
+                    <tr>    
+                        <td><img src="IMG/bar3.png" class="picart1"></td>
+                        <td>Vanilla</td>
+                       <td>15DL</td>
+                       <td><input type="radio"  value="1">
+                       </td>
+                      </tr>
+                      <tr>    
+                        <td><img src="IMG/bar4.png" class="picart1"></td>
+                        <td> Pistachio</td>
+                       <td>15DL</td>
+                       <td><input type="radio"  value="1">
+                       </td>
+                      </tr>
+                      <tr>    
+                        <td><img src="IMG/bar5.png" class="picart1"></td>
+                        <td>Mango</td>
+                       <td>15DL</td>
+                       <td><input type="radio" value="1">
+                       </td>
+                      </tr>
+                      <tr>    
+                        <td><img src="IMG/bar6.png" class="picart1"></td>
+                        <td>Coffe</td>
+                       <td>15DL</td>
+                       <td><input type="radio" value="1">
+                       </td>
+                      </tr>
+             </table>
+        </div>
         <footer>
             <div >
                 <p>E: Gilato@gmail.com</p>
@@ -53,6 +109,7 @@
                 <p><a href="contact.html" >BUSINESS SERVICES</a></p>
                 <p><a href="aboutus.html" >ABOUT US</a></p>
                 <p><a href="ourstory.html">OUR STORY</a></p>
+                <p><a href="map.html" >WHERE TO FIND US</a></p>
             </div>
         </footer>
     </body>
