--- a/cones.html
+++ b/cones.html
@@ -18,7 +18,9 @@
             <span><a href="aboutus.html" >About us</a></span>
             <span><a href="signin.html" >Signup</a></span>
             <span><a href="login.html" >Login</a></span>
+            <span ><a href="cart.html"><img src="IMG/logocart.png" id="logo1"></a></span>
         </div>
+        <div id="cart">
         <div class="dropdown">
             <button>Category</button>
             <div class="dropdown-content">
@@ -27,14 +29,14 @@
             <a href="bars.html">Bars</a>
             </div>
         </div>
-        <div>
+        <!--<div>
             <img class="picleft" src="IMG/cones1.png" alt="picture of ice cream">
             <img class="picmiddle" src="IMG/cones2.png" alt="picture of ice cream">
             <img class="picmiddle" src="IMG/cones3.png" alt="picture of ice cream">
         </div>
         <div class="first">
             <span class="pictextleft">Maltesers (10D)</span>
-            <span class="pictextmiddle">Sickers (10D)</span>
+            <span class="pictextmiddle">Snickers (10D)</span>
             <span class="pictextmiddle">Mars (10D)</span>
         </div>
         <div >
@@ -46,7 +48,61 @@
             <span class="pictextleft">Vanilla (10D)</span>
             <span class="pictextmiddle">Strawberry (10D)</span>
             <span class="pictextmiddle">Chocolate (10D)</span>
+        </div>-->
+        <div class="line">  </div>
+        <div >
+            <table style="width:100%" class="table1">
+                <tr>
+                  <th> </th>
+                  <th>flavour</th> 
+                  <th>Price</th>
+                  <th>add to cart</th>
+                </tr>
+                <tr>    
+                    <td><img src="IMG/cones1.png" class="picart1"></td>
+                    <td>Maltesers</td>
+                   <td>12DL</td>
+                   <td><input type="radio"  value="12">
+                   </td>
+                  </tr>
+                  <tr>    
+                      <td><img src="IMG/cones2.png" class="picart1"></td>
+                      <td>Snickers</td>
+                     <td>15DL</td>
+                     <td><input type="radio"  value="12">
+                     </td>
+                    </tr>
+                    <tr>    
+                        <td><img src="IMG/cones3.png" class="picart1"></td>
+                        <td>Mars </td>
+                       <td>15DL</td>
+                       <td><input type="radio"  value="1">
+                       </td>
+                      </tr>
+                      <tr>    
+                        <td><img src="IMG/cones4.png" class="picart1"></td>
+                        <td>Strawberry</td>
+                       <td>15DL</td>
+                       <td><input type="radio"  value="1">
+                       </td>
+                      </tr>
+                      <tr>    
+                        <td><img src="IMG/cones5.png" class="picart1"></td>
+                        <td>Vanilla</td>
+                       <td>15DL</td>
+                       <td><input type="radio" value="1">
+                       </td>
+                      </tr>
+                      <tr>    
+                        <td><img src="IMG/cones6.png" class="picart1"></td>
+                        <td>Cherry</td>
+                       <td>15DL</td>
+                       <td><input type="radio" value="1">
+                       </td>
+                      </tr>
+             </table>
         </div>
+
         <footer>
             <div >
                 <p>E: Gilato@gmail.com</p>
@@ -54,6 +110,7 @@
                 <p><a href="contact.html" >BUSINESS SERVICES</a></p>
                 <p><a href="aboutus.html" >ABOUT US</a></p>
                 <p><a href="ourstory.html" >OUR STORY</a></p>
+                <p><a href="map.html" >WHERE TO FIND US</a></p>
             </div>
         </footer>
     </body>
