--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
             <span><a href="aboutus.html" >About us</a></span>
             <span><a href="signin.html" >Signup</a></span>
             <span><a href="login.html" >Login</a></span>
+            <span ><a href="cart.html"><img src="IMG/logocart.png" id="logo1"></a></span>
         </div>  
         <div id="contactbox">
             <p>Thanks for visiting us</p>
@@ -43,6 +44,7 @@
                 <p><a href="contact.html" >BUSINESS SERVICES</a></p>
                 <p><a href="aboutus.html" >ABOUT US</a></p>
                 <p><a href="ourstory.html" >OUR STORY</a></p>
+                <p><a href="map.html" >WHERE TO FIND US</a></p>
             </div>
         </footer>
     </body>
