--- a/prices.html
+++ b/prices.html
@@ -12,13 +12,13 @@
     <body class="price">
         <div class="nav_bar">
             <span id="logo"><a href="ourstory.html" id="logoc">Gilato</a></span>
-            <span><a href="homepage.html" >home</a></span>
+            <span><a href="homepage.php" >home</a></span>
             <span><a href="prices.html" id="contact">Prices</a></span>
             <span><a href="contact.html" >Contact us</a></span>
             <span><a href="aboutus.html" >About us</a></span>
             <span><a href="signin.html" >Signup</a></span>
             <span><a href="login.html" >Login</a></span>
-            <span ><a href="cart.html"><img src="IMG/logocart.png" id="logo1"></a></span>
+            <span ><a href="cart.php"><img src="IMG/logocart.png" id="logo1"></a></span>
         </div>
         <div id="cart">
         <div class="dropdown">
@@ -29,6 +29,7 @@
             <a href="bars.html">Bars</a>
             </div>
         </div>
+        <form>
         <div class="line">  </div>
         <div >
             <table style="width:100%" class="table1">
@@ -82,6 +83,7 @@
                       </tr>
              </table>
         </div>
+    </form>
         <footer>
             <div >
                 <p>E: Gilato@gmail.com</p>
