--- a/cones.html
+++ b/cones.html
@@ -12,13 +12,13 @@
     <body class="price">
         <div class="nav_bar">
             <span id="logo"><a href="ourstory.html" id="logoc">Gilato</a></span>
-            <span><a href="homepage.html" >home</a></span>
+            <span><a href="homepage.php" >home</a></span>
             <span><a href="prices.html" id="contact">Prices</a></span>
             <span><a href="contact.html" >Contact us</a></span>
             <span><a href="aboutus.html" >About us</a></span>
             <span><a href="signin.html" >Signup</a></span>
             <span><a href="login.html" >Login</a></span>
-            <span ><a href="cart.html"><img src="IMG/logocart.png" id="logo1"></a></span>
+            <span ><a href="cart.php"><img src="IMG/logocart.png" id="logo1"></a></span>
         </div>
         <div id="cart">
         <div class="dropdown">
@@ -29,26 +29,6 @@
             <a href="bars.html">Bars</a>
             </div>
         </div>
-        <!--<div>
-            <img class="picleft" src="IMG/cones1.png" alt="picture of ice cream">
-            <img class="picmiddle" src="IMG/cones2.png" alt="picture of ice cream">
-            <img class="picmiddle" src="IMG/cones3.png" alt="picture of ice cream">
-        </div>
-        <div class="first">
-            <span class="pictextleft">Maltesers (10D)</span>
-            <span class="pictextmiddle">Snickers (10D)</span>
-            <span class="pictextmiddle">Mars (10D)</span>
-        </div>
-        <div >
-            <img class="picleft" src="IMG/cones4.png" alt="picture of ice cream">
-            <img class="picmiddle" src="IMG/cones5.png" alt="picture of ice cream">
-            <img class="picmiddle" src="IMG/cones6.png" alt="picture of ice cream">
-        </div>
-        <div class="first">
-            <span class="pictextleft">Vanilla (10D)</span>
-            <span class="pictextmiddle">Strawberry (10D)</span>
-            <span class="pictextmiddle">Chocolate (10D)</span>
-        </div>-->
         <div class="line">  </div>
         <div >
             <table style="width:100%" class="table1">
