--- a/ourstory.html
+++ b/ourstory.html
@@ -12,13 +12,13 @@
     <body class="ourstory">
         <div class="nav_bar">
             <span id="logo"><a href="ourstory.html" id="logoc">Gilato</a></span>
-            <span><a href="homepage.html" >home</a></span>
+            <span><a href="homepage.php" >home</a></span>
             <span><a href="prices.html" >Prices</a></span>
             <span><a href="contact.html" >Contact us</a></span>
             <span><a href="aboutus.html" >About us</a></span>
             <span><a href="signin.html" >Signup</a></span>
             <span><a href="login.html" >Login</a></span>
-            <span ><a href="cart.html"><img src="IMG/logocart.png" id="logo1"></a></span>
+            <span ><a href="cart.php"><img src="IMG/logocart.png" id="logo1"></a></span>
         </div>
         <section id="section1">
                <div >
