--- a/aboutus.html
+++ b/aboutus.html
@@ -13,12 +13,13 @@
         <div class="nav_bar">
             <span id="logo"><a href="ourstory.html" id="logoc">Gilato</a></span>
             <span><a href="homepage.php" >home</a></span>
-            <span><a href="prices.html" >Prices</a></span>
+            <span><a href="prices.php" >Prices</a></span>
             <span><a href="contact.html" >Contact us</a></span>
             <span><a href="aboutus.html" id="contact">About us</a></span>
             <span><a href="signin.html" >Signup</a></span>
             <span><a href="login.html" >Login</a></span>
-            <span ><a href="cart.html"><img src="IMG/logocart.png" id="logo1"></a></span>
+            <span><a href="logout.php" >Logout</a></span>
+            <span ><a href="cart.php"><img src="IMG/logocart.png" id="logo1"></a></span>
         </div>
         <div id="aboutbox">
             <h4> Gilato Shop ice cream has been opened in 2001 it has many brunches 
