--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,12 @@
         <div class="nav_bar">
             <span id="logo"><a href="ourstory.html" id="logoc">Gilato</a></span>
             <span><a href="homepage.php" >home</a></span>
-            <span><a href="prices.html" >Prices</a></span>
+            <span><a href="prices.php" >Prices</a></span>
             <span ><a href="contact.html" id="contact">Contact us</a></span>
             <span><a href="aboutus.html" >About us</a></span>
             <span><a href="signin.html" >Signup</a></span>
             <span><a href="login.html" >Login</a></span>
+            <span><a href="logout.php" >Logout</a></span>
             <span ><a href="cart.php"><img src="IMG/logocart.png" id="logo1"></a></span>
         </div>  
         <div id="contactbox">
