--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             <span><a href="prices.php" >Prices</a></span>
             <span ><a href="contact.html" id="contact">Contact us</a></span>
             <span><a href="aboutus.html" >About us</a></span>
-            <span><a href="signin.html" >Signup</a></span>
+            <span><a href="signin.php" >Signup</a></span>
             <span><a href="login.html" >Login</a></span>
             <span><a href="logout.php" >Logout</a></span>
             <span ><a href="cart.php"><img src="IMG/logocart.png" id="logo1"></a></span>
