--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             <p>Welcome </p><br>
             <form action="loging.php" method="post">
                 <input type="text" name="name" size="size" maxlength="length"  placeholder="Enter your email" class="boxstyle"><br>
-                <input type="password" name="pass" size="size" maxlength="length"  placeholder="Password" class="boxstyle"><br>
+                <input type="text" name="pass" size="size" maxlength="length"  placeholder="Password" class="boxstyle"><br>
                 <input type="submit" value="Login" id="Signup1">
             </form>
         </div>
