--- a/ourstory.html
+++ b/ourstory.html
@@ -19,7 +19,7 @@
             <span><a href="signin.php" >Signup</a></span>
             <span><a href="login.html" >Login</a></span>
             <span><a href="logout.php" >Logout</a></span>
-            <span ><a href="cart.php"><img src="IMG/logocart.png" id="logo1"></a></span>
+            <span ><a href="cart1.php"><img src="IMG/logocart.png" id="logo1"></a></span>
         </div>
         <section id="section1">
                <div >
